SW-7858 Fixed: The select field browser default trigger isn't visible in FF anymore

--- a/engine/Shopware/Themes/Frontend/Bare/frontend/_public/src/less/_components/fields.less
+++ b/engine/Shopware/Themes/Frontend/Bare/frontend/_public/src/less/_components/fields.less
@@ -82,7 +82,7 @@ input[type="email"] {
 		color: @primaryTextColor;
 		background: transparent;
 		border: 0 none;
-		width: 100%;
+		width: 102%;	// Oversize to hide the browser default trigger in FF
 		cursor: pointer;
 	}
 
